# scrabble

./: CMakeLists.txt  README.md
description/: description.tex
include/: board.hpp  button.hpp  game.hpp  menu.hpp  player.hpp  textbox.hpp
src/: board.cpp  button.cpp  game.cpp  main.cpp  menu.cpp  player.cpp  textbox.cpp
